# cookiecutter-ci

./: cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.project_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
{{cookiecutter.project_name}}/.circleci/: config.yml
{{cookiecutter.project_name}}/tests/: conftest.py
