[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}}"]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "==20.8b1"
flake8 = "==3.8.4"
IPython = "*"
isort = "*"
pre-commit = "*"
pydocstyle = "*"
pysnooper = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
include = '.pyi?$'
exclude = '''
/(
    .git
    | venv
    | __pycache__
    | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
skip = "migrations,venv"
skip_glob = "migrations/*.py"